# demo-cellprofiler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/docker/3d-nuclei-profiling/: 3d-nuclei-profiling.cppipe  run.sh
src/docker/3d-nuclei-profiling/output/: MyExpt_Experiment.csv  MyExpt_RealsizeNuclei.csv  MyExpt_Watershed.csv  nuclei1_out_c00_dr90_image3D.tiff  nuclei2_out_c90_dr90_image3D.tiff  nuclei3_out_c00_dr10_image3D.tiff  nuclei4_out_c90_dr10_image3D.tiff
src/docker/sqlite_compartment_object_parent_foreign_keys/: Dockerfile  ExampleHuman_exporttodatabase.cppipe  ExampleHuman_modified.sqlite  add_object_parent_foreign_keys.py  examplehuman_modified.sql  run.sh
src/docker/sqlite_compartment_object_parent_foreign_keys/output/: ExampleHuman.sqlite
src/docker/sqlite_foreign_keys/: Dockerfile  run.sh
src/docker/sqlite_image_thumbnails/: ExampleHuman_exporttodatabase.cppipe  ExampleHuman_exporttodatabase_thumbnails.cppipe  read_cp_sqlite_image_to_file.py  run.sh  thumbnail_schema_diff.diff  with_thumbnails_schema.sql  without_thumbnails_schema.sql
src/docker/sqlite_image_thumbnails/output/: ExampleHuman_thumbnails.sqlite
