[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "demo-cellprofiler"
version = "0.0.1"
description = "Demonstrating various CellProfiler development or implementations."
authors = [
  "d33bs",
]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
poethepoet = "^0.29.0"

[tool.setuptools_scm]
root = "."

[tool.poe.tasks]
# defines tasks for poethepoet use
# e.g. `poetry run poe ...`
sqlite_foreign_keys.shell = """
CPDOCKER_RUNDIR=$PWD/src/docker/sqlite_foreign_keys
CPDOCKER_IMAGE_NAME=cp-sqlite-fk
docker build -t $CPDOCKER_IMAGE_NAME -f $CPDOCKER_RUNDIR/Dockerfile .
docker run --rm -it --platform linux/amd64 -w /app -v $CPDOCKER_RUNDIR:/app $CPDOCKER_IMAGE_NAME /bin/bash
"""
