[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69",
]

[project]
name = "demo-cellprofiler"
version = "0.0.1"
description = "Demonstrating various CellProfiler development or implementations."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "d33bs" },
]
requires-python = ">=3.10,<4.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=2.1.2,<3",
  "pandas>=2.3.3",
  "pillow>=10.4,<11",
  "poethepoet>=0.29,<0.30",
  "pyarrow>=23.0.0",
]

[tool.setuptools_scm]
root = "."

[tool.poe.tasks]
# defines tasks for poethepoet use
# e.g. `uv run poe ...`
sqlite_foreign_keys.shell = """
source $PWD/src/docker/sqlite_compartment_object_parent_foreign_keys/run.sh
"""
sqlite_image_thumbnails.shell = """
source $PWD/src/docker/sqlite_image_thumbnails/run.sh
"""
threedee_nuclei_profiling.shell = """
source $PWD/src/docker/3d-nuclei-profiling/run.sh
"""
